--- a/app/src/main/res/layout/activity_new_habit.xml
+++ b/app/src/main/res/layout/activity_new_habit.xml
@@ -3,6 +3,9 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="hevinxx.iinc.habit.presentation.NewHabitViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
