--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,18 +2,25 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="primaryColor">@color/primary</item>
+        <item name="primaryColorSub">@color/primaryDark</item>
+        <item name="accentColor">@color/accent</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="surfaceColor">@color/white</item>
+        <item name="textColorOnPrimary">@color/white</item>
+        <item name="textColorOnPrimarySub">@color/whiteGray</item>
+        <item name="textColorOnBackground">@color/black</item>
+        <item name="textColorOnBackgroundSub">@color/blackGray</item>
+        <item name="textColorOnSurface">@color/black</item>
+        <item name="textColorOnSurfaceSub">@color/blackGray</item>
+        <item name="borderLineColor">@color/blackGray</item>
+        <item name="borderLineColorSub">@color/whiteGray</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
