--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="primaryColor" format="reference" />
-    <attr name="primaryColorSub" format="reference" />
-    <attr name="accentColor" format="reference" />
+    <attr name="colorPrimarySub" format="reference" />
     <attr name="surfaceColor" format="reference" />
     <attr name="textColorOnPrimary" format="reference" />
     <attr name="textColorOnPrimarySub" format="reference" />
@@ -10,6 +8,8 @@
     <attr name="textColorOnBackgroundSub" format="reference" />
     <attr name="textColorOnSurface" format="reference" />
     <attr name="textColorOnSurfaceSub" format="reference" />
+    <attr name="textColorOnFab" format="reference" />
     <attr name="borderLineColor" format="reference" />
     <attr name="borderLineColorSub" format="reference" />
+    <attr name="fabColor" format="reference" />
 </resources>
