--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,13 @@
     <dimen name="appbar_padding">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="text_title">20sp</dimen>
+    <dimen name="text_label">15sp</dimen>
+    <dimen name="text_content">17sp</dimen>
+    <dimen name="text_padding">5dp</dimen>
+    <dimen name="divider_top">2dp</dimen>
+    <dimen name="divider_bottom">5dp</dimen>
+
+    <dimen name="color_button_size">25dp</dimen>
 </resources>
