--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="primaryColor">@color/primary</item>
-        <item name="primaryColorSub">@color/primaryDark</item>
-        <item name="accentColor">@color/accent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimarySub">@color/primaryDark</item>
+        <item name="colorAccent">@color/accent</item>
         <item name="backgroundColor">@color/white</item>
         <item name="surfaceColor">@color/white</item>
         <item name="textColorOnPrimary">@color/white</item>
@@ -13,8 +13,10 @@
         <item name="textColorOnBackgroundSub">@color/blackGray</item>
         <item name="textColorOnSurface">@color/black</item>
         <item name="textColorOnSurfaceSub">@color/blackGray</item>
+        <item name="textColorOnFab">@color/white</item>
         <item name="borderLineColor">@color/blackGray</item>
         <item name="borderLineColorSub">@color/whiteGray</item>
+        <item name="fabColor">@color/primary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -24,4 +26,42 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Label">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">?attr/textColorOnSurfaceSub</item>
+        <item name="android:layout_marginBottom">@dimen/divider_bottom</item>
+        <item name="android:textSize">@dimen/text_label</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="EditText">
+        <item name="colorControlNormal">?attr/textColorOnSurface</item>
+        <item name="colorControlHighlight">?attr/textColorOnSurface</item>
+        <item name="colorControlActivated">?attr/textColorOnSurface</item>
+        <item name="android:textSize">@dimen/text_content</item>
+        <item name="android:textColor">?attr/textColorOnSurface</item>
+        <item name="android:textColorHint">?attr/textColorOnSurfaceSub</item>
+        <item name="android:background">@null</item>
+        <item name="android:textCursorDrawable">@null</item>
+    </style>
+
+    <style name="ContentText">
+        <item name="android:textSize">@dimen/text_content</item>
+        <item name="android:textColor">?attr/textColorOnSurface</item>
+    </style>
+
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?attr/textColorOnSurfaceSub</item>
+        <item name="android:layout_marginTop">@dimen/divider_top</item>
+        <item name="android:layout_marginBottom">@dimen/divider_bottom</item>
+    </style>
+
+    <style name="Fab">
+        <item name="backgroundTint">?attr/fabColor</item>
+        <item name="tint">?attr/textColorOnFab</item>
+        <item name="android:layout_margin">@dimen/fab_margin</item>
+    </style>
 </resources>
