--- a/app/src/main/res/layout/color_button.xml
+++ b/app/src/main/res/layout/color_button.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/text_padding">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/circle"
