--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="primary">#2e2f3f</color>
     <color name="primaryDark">#20202c</color>
     <color name="primaryLight">#424352</color>
-    <color name="accent">#ffff9f</color>
 
     <color name="white">#fdfdff</color>
     <color name="whiteGray">#909099</color>
@@ -12,9 +11,9 @@
 
     <color name="red">#fd0e35</color>
     <color name="orange">#ff7f00</color>
-    <color name="yellow">#ffff9f</color>
-    <color name="lightGreen">#b7ff9f</color>
-    <color name="lightBlue">#9fdfff</color>
+    <color name="yellow">#ffff17</color>
+    <color name="lightGreen">#71ff31</color>
+    <color name="lightBlue">#31e6ff</color>
     <color name="cobaltBlue">#00498c</color>
     <color name="darkBlue">#1b294b</color>
     <color name="purple">#6937a1</color>
