Solve rendering issues in low android API.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,7 +64,7 @@
     </style>
 
     <style name="Spinner" parent="ContentText">
-        <item name="android:background">@drawable/spinner</item>
+        <item name="drawableRightCompat">@drawable/spinner</item>
         <item name="backgroundTint">?attr/textColorOnSurfaceSub</item>
     </style>
 </resources>
