--- a/app/src/main/res/drawable/hollow_circle.xml
+++ b/app/src/main/res/drawable/hollow_circle.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
+        android:color="#000000"
         android:width="2dp" />
+    <solid
+        android:color="#00000000" />
 </shape>
