--- a/app/src/main/res/drawable/spinner.xml
+++ b/app/src/main/res/drawable/spinner.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/ic_arrow_drop_down_black_24dp"
-        android:gravity="right"></item>
+        android:gravity="right" />
 </layer-list>
