--- a/app/src/main/res/layout/color_button.xml
+++ b/app/src/main/res/layout/color_button.xml
@@ -10,7 +10,7 @@
         android:layout_width="@dimen/color_button_size"
         android:layout_height="@dimen/color_button_size"
         android:layout_centerInParent="true"
-        android:src="@drawable/circle"
+        app:srcCompat="@drawable/circle"
         tools:tint="@color/red" />
 
     <ImageView
@@ -19,7 +19,7 @@
         android:layout_height="@dimen/color_button_size"
         android:layout_centerInParent="true"
         android:padding="2dp"
-        android:tint="?attr/backgroundColor"
+        app:tint="?attr/backgroundColor"
         android:visibility="invisible"
         app:srcCompat="@drawable/ic_check_black_24dp"
         tools:visibility="visible" />
