--- a/app/src/main/res/layout/dow_button.xml
+++ b/app/src/main/res/layout/dow_button.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/text_padding">
 
     <ImageView
         android:id="@+id/check"
         android:layout_width="@dimen/color_button_size"
         android:layout_height="@dimen/color_button_size"
-        android:src="@drawable/hollow_circle"
+        app:srcCompat="@drawable/hollow_circle"
         android:layout_centerInParent="true"
         android:visibility="invisible"
         tools:visibility="visible" />
@@ -21,5 +22,6 @@
         android:layout_height="@dimen/color_button_size"
         android:layout_centerInParent="true"
         android:textAlignment="center"
+        android:gravity="center"
         tools:text="M" />
 </RelativeLayout>
