Make today fragment.

--- a/app/src/main/res/layout/activity_edit_habit.xml
+++ b/app/src/main/res/layout/activity_edit_habit.xml
@@ -17,14 +17,14 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="?colorPrimary"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/new_habit"
-                android:textColor="?attr/textColorOnPrimary"
+                android:textColor="?textColorOnPrimary"
                 android:textSize="@dimen/text_title"
                 android:textStyle="bold" />
 
