--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="colorPrimarySub" format="reference" />
-    <attr name="surfaceColor" format="reference" />
-    <attr name="textColorOnPrimary" format="reference" />
-    <attr name="textColorOnPrimarySub" format="reference" />
-    <attr name="textColorOnBackground" format="reference" />
-    <attr name="textColorOnBackgroundSub" format="reference" />
-    <attr name="textColorOnSurface" format="reference" />
-    <attr name="textColorOnSurfaceSub" format="reference" />
-    <attr name="textColorOnFab" format="reference" />
-    <attr name="borderLineColor" format="reference" />
-    <attr name="borderLineColorSub" format="reference" />
-    <attr name="fabColor" format="reference" />
+    <attr name="colorPrimarySub" format="reference|color" />
+    <attr name="surfaceColor" format="reference|color" />
+    <attr name="textColorOnPrimary" format="reference|color" />
+    <attr name="textColorOnPrimarySub" format="reference|color" />
+    <attr name="borderAndRoundedCornerLayout" format="reference" />
+    <attr name="textColorOnBackground" format="reference|color" />
+    <attr name="textColorOnBackgroundSub" format="reference|color" />
+    <attr name="textColorOnSurface" format="reference|color" />
+    <attr name="textColorOnSurfaceSub" format="reference|color" />
+    <attr name="textColorOnFab" format="reference|color" />
+    <attr name="borderLineColor" format="reference|color" />
+    <attr name="borderLineColorSub" format="reference|color" />
+    <attr name="fabColor" format="reference|color" />
 </resources>
