--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <dimen name="divider_bottom">10dp</dimen>
 
     <dimen name="color_button_size">25dp</dimen>
+
+    <dimen name="layout_border">3dp</dimen>
+    <dimen name="layout_corner">8dp</dimen>
+    <dimen name="layout_padding">16dp</dimen>
 </resources>
