--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="surfaceColor">@color/white</item>
         <item name="textColorOnPrimary">@color/white</item>
         <item name="textColorOnPrimarySub">@color/whiteGray</item>
+        <item name="borderAndRoundedCornerLayout">@drawable/border_and_rounded_corner_layout_white_gray</item>
         <item name="textColorOnBackground">@color/black</item>
         <item name="textColorOnBackgroundSub">@color/blackGray</item>
         <item name="textColorOnSurface">@color/black</item>
@@ -27,44 +28,50 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Label">
-        <item name="android:textColor">?attr/textColorOnSurfaceSub</item>
+        <item name="android:textColor">?textColorOnSurfaceSub</item>
         <item name="android:layout_marginBottom">@dimen/divider_bottom</item>
         <item name="android:textSize">@dimen/text_label</item>
         <item name="android:textStyle">normal</item>
     </style>
 
     <style name="EditText">
-        <item name="colorControlNormal">?attr/textColorOnSurface</item>
-        <item name="colorControlHighlight">?attr/textColorOnSurface</item>
-        <item name="colorControlActivated">?attr/textColorOnSurface</item>
+        <item name="colorControlNormal">?textColorOnSurface</item>
+        <item name="colorControlHighlight">?textColorOnSurface</item>
+        <item name="colorControlActivated">?textColorOnSurface</item>
         <item name="android:textSize">@dimen/text_content</item>
-        <item name="android:textColor">?attr/textColorOnSurface</item>
-        <item name="android:textColorHint">?attr/textColorOnSurfaceSub</item>
+        <item name="android:textColor">?textColorOnSurface</item>
+        <item name="android:textColorHint">?textColorOnSurfaceSub</item>
         <item name="android:background">@null</item>
         <item name="android:textCursorDrawable">@null</item>
     </style>
 
+    <style name="ContentTitle">
+        <item name="android:textSize">@dimen/text_title</item>
+        <item name="android:textColor">?textColorOnSurface</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="ContentText">
         <item name="android:textSize">@dimen/text_content</item>
-        <item name="android:textColor">?attr/textColorOnSurface</item>
+        <item name="android:textColor">?textColorOnSurface</item>
     </style>
 
     <style name="Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">?attr/textColorOnSurfaceSub</item>
+        <item name="android:background">?textColorOnSurfaceSub</item>
         <item name="android:layout_marginTop">@dimen/divider_top</item>
         <item name="android:layout_marginBottom">@dimen/divider_bottom</item>
     </style>
 
     <style name="Fab">
-        <item name="backgroundTint">?attr/fabColor</item>
-        <item name="tint">?attr/textColorOnFab</item>
+        <item name="backgroundTint">?fabColor</item>
+        <item name="tint">?textColorOnFab</item>
         <item name="android:layout_margin">@dimen/fab_margin</item>
     </style>
 
     <style name="Spinner" parent="ContentText">
         <item name="drawableRightCompat">@drawable/spinner</item>
-        <item name="backgroundTint">?attr/textColorOnSurfaceSub</item>
+        <item name="backgroundTint">?textColorOnSurfaceSub</item>
     </style>
 </resources>
